fix: posts & scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -266,3 +266,18 @@
 	padding: 0;
 	color: inherit;
 }
+
+.prose-content pre::-webkit-scrollbar {
+	height: 12px;
+}
+.prose-content pre::-webkit-scrollbar-thumb {
+	background: var(--border);
+	border-radius: 4px;
+}
+.prose-content pre::-webkit-scrollbar-track {
+	background: var(--background);
+}
+.prose-content pre {
+	scrollbar-width: thin;
+	scrollbar-color: var(--border) var(--background);
+}
